<?xml version="1.0" encoding="utf-8"?>

<!-- Opcoes do menu lateral-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:title="@string/string_evento">

        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/id_ic_tsf"
                    android:title="@string/string_tsf"
                    android:icon="@drawable/ic_break"
                    />


                <item
                    android:id="@+id/id_ic_atracao"
                    android:title="@string/string_atracao"
                    android:icon="@drawable/ic_atracao"
                    />


                <item
                    android:id="@+id/id_djs"
                    android:title="@string/string_djs"
                    android:icon="@drawable/ic_djs"/>

                <item
                    android:id="@+id/id_ic_jurados"
                    android:title="@string/string_jurados"
                    android:icon="@drawable/ic_jurados"/>

                <item
                    android:id="@+id/id_ic_patrocinadores"
                    android:title="@string/string_patrocinadores"
                    android:icon="@drawable/ic_patrocinadores"/>


                <item
                    android:id="@+id/id_ic_contato"
                    android:title="@string/string_contato"
                    android:icon="@drawable/ic_menu_send"/>


                <item
                    android:id="@+id/id_ic_compartilhar"
                    android:title="@string/string_compartilhar"
                    android:icon="@drawable/ic_menu_share"/>


            </group>
        </menu>

    </item>




    <item android:title="@string/string_local">

        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/id_ic_localData"
                    android:title="@string/string_endereco2"
                    android:icon="@drawable/ic_endereco"/>

                <item
                    android:id="@+id/id_ic_chegar"
                    android:title="@string/string_chegar"
                    android:icon="@drawable/ic_chegar"/>


            </group>
        </menu>

    </item>





    <item android:title="@string/string_inscricoes">

        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/id_ic_inscricao"
                    android:title="@string/string_inscrevase"
                    android:icon="@drawable/ic_inscricao"/>


            </group>
        </menu>

    </item>




    <item android:title="@string/string_social">

        <menu>
            <group android:checkableBehavior="single">


                <item
                    android:id="@+id/id_ic_blog"
                    android:title="@string/string_blog"
                    android:icon="@drawable/ic_blog"/>

                <item
                    android:id="@+id/id_ic_facebook"
                    android:title="@string/string_facebook"
                    android:icon="@drawable/ic_facebook"/>


                <item
                    android:id="@+id/id_ic_instagram"
                    android:title="@string/string_instagram"
                    android:icon="@drawable/ic_instagram"/>


                <item
                    android:id="@+id/id_youtube"
                    android:title="@string/string_youtube"
                    android:icon="@drawable/ic_youtube"/>


            </group>
        </menu>

    </item>




    <item android:title="@string/string_sobreapp">

        <menu>
            <item
                android:id="@+id/id_opc_developer"
                android:icon="@drawable/ic_android"
                android:title="@string/string_developer" />

        </menu>

    </item>



</menu>
