<?xml version="1.0" encoding="utf-8"?>

<ScrollView

    xmlns:android        ="http://schemas.android.com/apk/res/android"
    xmlns:tools          ="http://schemas.android.com/tools"
    android:layout_width ="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:layout_width  ="match_parent"
        android:layout_height ="match_parent"
        android:background    ="@drawable/background_2"
        android:orientation   ="vertical"
        tools:context=".TelaInfo"
        android:weightSum="1">



        <RelativeLayout
            android:layout_width ="match_parent"
            android:layout_height="220dp"
            >

            <ImageView
                android:layout_width            ="match_parent"
                android:layout_height           ="match_parent"
                android:src                     ="@drawable/photo01"
                android:background              ="@color/colorPrimary"
                android:stateListAnimator       ="@null"
                android:elevation               ="10dp"
                android:layout_alignParentBottom="true" />

            <ImageView
                android:layout_width            ="56dp"
                android:layout_height           ="50dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight ="true"
                android:layout_marginRight      ="17dp"
                android:src                     ="@drawable/ic_tsf"
                android:background              ="@drawable/fundo_do_icone"
                android:stateListAnimator       ="@null"
                android:elevation               ="10dp" />



        </RelativeLayout>



        <TextView
            android:layout_width  ="wrap_content"
            android:layout_height ="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop    ="8dp"
            android:paddingLeft   ="10dp"
            android:text          ="@string/string_opc_tsf"
            android:textSize      ="25sp"
            android:textStyle     ="bold"
            android:layout_marginBottom="7dp"
            android:textColor="@color/black"
            android:textColorHighlight="#141414"
            android:typeface="serif" />




        <ImageView
            android:layout_width  ="124dp"
            android:layout_height ="70dp"
            android:layout_gravity="center_horizontal"
            android:src           ="@drawable/ic_break"
            android:layout_weight="0.26" />


        <TextView
            android:layout_width    ="wrap_content"
            android:layout_height   ="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:paddingLeft     ="10dp"
            android:layout_gravity  ="center_horizontal"
            android:text            ="@string/string_opc_tsf1"
            android:textSize        ="16sp"
            android:textStyle       ="bold"
            android:textColorHighlight="@color/black"
            android:textColor="@color/black"
            android:gravity="center"
            android:typeface="sans" />



        <RelativeLayout
            android:layout_width ="match_parent"
            android:layout_height="220dp"
            >

            <ImageView
                android:layout_width            ="match_parent"
                android:layout_height           ="match_parent"
                android:src                     ="@drawable/photo02"
                android:background              ="@color/colorPrimary"
                android:stateListAnimator       ="@null"
                android:elevation               ="10dp"
                android:layout_alignParentBottom="true" />

            <ImageView
                android:layout_width            ="56dp"
                android:layout_height           ="50dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight ="true"
                android:layout_marginRight      ="17dp"
                android:src                     ="@drawable/ic_tsf"
                android:background              ="@drawable/fundo_do_icone"
                android:stateListAnimator       ="@null"
                android:elevation               ="10dp" />



        </RelativeLayout>




        <TextView
            android:layout_width    ="wrap_content"
            android:layout_height   ="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:paddingLeft     ="10dp"
            android:layout_gravity  ="center_horizontal"
            android:text            ="@string/string_opc_tsf2"
            android:textSize        ="16sp"
            android:textStyle       ="bold"
            android:textColorHighlight="@color/black"
            android:textColor="@color/black"
            android:gravity="center"
            android:typeface="sans" />

        <RelativeLayout
            android:layout_width ="match_parent"
            android:layout_height="220dp"
            >

            <ImageView
                android:layout_width            ="match_parent"
                android:layout_height           ="match_parent"
                android:src                     ="@drawable/photo03"
                android:background              ="@color/colorPrimary"
                android:stateListAnimator       ="@null"
                android:elevation               ="10dp"
                android:layout_alignParentBottom="true" />

            <ImageView
                android:layout_width            ="56dp"
                android:layout_height           ="50dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight ="true"
                android:layout_marginRight      ="17dp"
                android:src                     ="@drawable/ic_tsf"
                android:background              ="@drawable/fundo_do_icone"
                android:stateListAnimator       ="@null"
                android:elevation               ="10dp" />



        </RelativeLayout>


        <TextView
            android:layout_width    ="wrap_content"
            android:layout_height   ="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:paddingLeft     ="10dp"
            android:layout_gravity  ="center_horizontal"
            android:text            ="@string/string_opc_tsf3"
            android:textSize        ="16sp"
            android:textStyle       ="bold"
            android:textColorHighlight="@color/black"
            android:textColor="@color/black"
            android:typeface="sans" />

        <RelativeLayout
            android:layout_width ="match_parent"
            android:layout_height="220dp"
            >

            <ImageView
                android:layout_width            ="match_parent"
                android:layout_height           ="match_parent"
                android:src                     ="@drawable/photo04"
                android:background              ="@color/colorPrimary"
                android:stateListAnimator       ="@null"
                android:elevation               ="10dp"
                android:layout_alignParentBottom="true" />

            <ImageView
                android:layout_width            ="56dp"
                android:layout_height           ="50dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight ="true"
                android:layout_marginRight      ="17dp"
                android:src                     ="@drawable/ic_tsf"
                android:background              ="@drawable/fundo_do_icone"
                android:stateListAnimator       ="@null"
                android:elevation               ="10dp" />



        </RelativeLayout>


        <TextView
            android:layout_width        ="wrap_content"
            android:layout_height       ="wrap_content"
            android:layout_marginTop    ="20dp"
            android:layout_marginBottom ="20dp"
            android:paddingLeft         ="10dp"
            android:layout_gravity      ="center_horizontal"
            android:text                ="@string/string_opc_tsf4"
            android:textSize            ="16sp"
            android:textStyle           ="bold"
            android:textColorHighlight  ="@color/black"
            android:textColor           ="@color/black"
            android:typeface            ="sans" />

        <RelativeLayout
            android:layout_width ="match_parent"
            android:layout_height="220dp"
            >

            <ImageView
                android:layout_width            ="match_parent"
                android:layout_height           ="match_parent"
                android:src                     ="@drawable/photo06"
                android:background              ="@color/colorPrimary"
                android:stateListAnimator       ="@null"
                android:elevation               ="10dp"
                android:layout_alignParentBottom="true" />

            <ImageView
                android:layout_width            ="56dp"
                android:layout_height           ="50dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight ="true"
                android:layout_marginRight      ="17dp"
                android:src                     ="@drawable/ic_tsf"
                android:background              ="@drawable/fundo_do_icone"
                android:stateListAnimator       ="@null"
                android:elevation               ="10dp" />



        </RelativeLayout>




        <ImageView
            android:layout_width  ="197dp"
            android:layout_height ="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src           ="@drawable/ic_text_tsf" />

    </LinearLayout>

</ScrollView>